fixing overflow

--- a/assets/style/sun.css
+++ b/assets/style/sun.css
@@ -49,6 +49,7 @@
     position: relative;
     z-index: -1;
     font-size: 10px;
+    width: fit-content;
 }
 
 
